--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "eigenvalues": "cpp"
+        "eigenvalues": "cpp",
+        "core": "cpp"
     }
 }
