kernel LMDI doesnt crash, but has bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,8 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "eigenvalues": "cpp",
-        "core": "cpp"
+        "core": "cpp",
+        "forward_list": "cpp",
+        "valarray": "cpp"
     }
 }
