remove mesh.xml files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /notebook/block_cluster_tree.eps
 /notebook/cluster_tree.eps
 /notebook/kernel_hmatrix.eps
+/notebook/mesh.xml
+/notebook/mesh_from_file.xml
